    + Dropped support for 32bit systems;
    + PHP 5.4 is now required;
    + Rack module enhancements (#1325):
        + Dynamic rack sizes;
        + Top-down / Bottom-up racks;
        + Custom rack devices independant of devices (power, patchpanel);
    + Customized user permissions for modules:
        + Customers modile permissions;
        + Rack module permissions;
    + API:
        + Add Mac Search for Addresses controller (#2005);

    Bugfixes:
    ----------------------------
    + Fix appended " U" in Rack description (#2046);
    + Fix Bandwidth calculator - 400 Bad Request. (#1807);
    + Fix bad DNS reverse zone for /23 subnet (#666);
    + Fix Add missing standard field (#2153);
    + Fix Consistency of VARCHAR Size on 'owner' column across tables (#2136);
    + API:
        + Fix inconsistant API success value returned (#2045);

    Security Fixes:
    ----------------------------
    + Hide SNMP community (#2197);

== 1.3.2

    Enhancements, changes:
    ----------------------------
    + Dark theme added;
    + Full php7.2 compatibility;
    + url_rewrite has changed, please use new rewrite scheme (https://phpipam.net/news/new_rewrite_scheme/);
    + Search for matching subnet in all VRFs feature enabled when importing addresses;
    + Added new config option to show custom fields separated from standard fields when editing IP address;
    + Added Required fields subpage to define IP address fields that must be filled in;
    + Performance + bug fixes (#1660, #1657);
    + MasterSubnet dropdown list is dynamically generated via AJAX call;
    + Bandwidth calculator;
    + Support 8U rack sizes. (#1891);
    + API:
        + New last_subnet API calls (#1655);

    Translations:
    ----------------------------
    + German translation updated to verson 1.3.1;
    + French translations updated. (#1881);

    Bugfixes:
    ----------------------------
    + Fixed uncaught error if vlan number exceeds max permitted (#1455);