@@ -6,7 +6,7 @@ require_once( dirname(__FILE__) . '/../../../functions/functions.php' );
 # initialize user object
 $Database 	= new Database_PDO;
 $User 		= new User ($Database);
-$Admin	 	= new Admin ($Database);
+$Admin	 	= new Admin ($Database, false);
 $Tools	 	= new Tools ($Database);
 $Result 	= new Result ();
 
@@ -15,7 +15,8 @@ $User->check_user_session();
 
 # strip input tags
 $_POST = $Admin->strip_input_tags($_POST);
-
+# validate NAT permissions
+$User->check_module_permissions ("nat", 2, true, true);
 
 # validations
 if($_POST['object_type']!=="subnets" && $_POST['object_type']!=="ipaddresses")
